assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --primary-color: rgb(221, 221, 221);
    --secondary-color: #2b6a8b;
    --tertiary-color: #09474e;
  }

body {
    color:var(--tertiary-color);
    font-family: Helvetica, Arial, sans-serif;
    background-color: var(--primary-color);
}
/* Header Styles */
header {
    padding: 20px 35px;
    background-color:var(--tertiary-color);
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    background-position: 80%;
    z-index: 9999;
}

header h1 {
    font-weight: bold;
    font-size: 36px;
    color: var(--primary-color);
    margin: 0;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    background-color: rgba(43,106,139, .7);
    border-radius: 10px;
    padding: 10px 15px;
}

header a {
    text-decoration: none;
    color: var(--primary-color);
}

header nav {
    margin: 7px 0;
}

header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
}

header nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.55vw;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
    border-bottom: 2px solid;
    margin: 10px;
}

header nav ul li a:hover {
    background: var(--primary-color);
    color: var(--secondary-color);
    border-radius: 15px;
    text-shadow: none;
}
/*header end */

/* Hero Style Start */
.hero {
    background-image: url("../images/IMG_9640a.jpg");
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: right;
    flex-wrap: wrap;
    align-items: flex-start;
    background-attachment: fixed;
    background-position: 80%;
    height: 500px;
    position: relative;
}


.hero h2 {
    font-style: italic;
    font-size: 35px;
    color: var(--primary-color);
    display: flex;
    flex-wrap: wrap;
    background-color: rgba(43,106,139, 0.7);
    border-radius: 10px;
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 10px 15px;
    margin: 25px;
 
}
/* Hero Style End */

/*aboutme section*/

.flex-row p {
    line-height: 1.7;
    color:var(--tertiary-color);
    width: 80%;
    font-size: 20px;
    padding: 20px;
    text-align: justify;
    border-left: 3px solid;
}
/*end about me*/

/* my work section and grid*/
.work-wrapper {
    border-left: 3px solid;
    display: flex;
    width: 100%;
    justify-content: center;
}

.work-grid-container {
    width: 80%;
    display: grid;
    grid-template-columns: repeat(3, 4fr);
    grid-template-rows: repeat(3, 2fr);
    color:  var(--secondary-color);
    font-size: 1.2rem;
    grid-gap: 20px;
    position: relative;
}

.work-grid-item {
    padding: 15px 0;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: left;
    height: 150px;
    border: solid 3px var(--secondary-color);
    position: relative;
    cursor: pointer;
}

.work-grid-item::after {
    content: "";
    height: 100%;
    width: 100%;
    background: rgba(252, 225, 56, 0.7);
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
}

.work-grid-container:hover .work-grid-item::after {
    opacity: 0.7;
    transition: all 0.5s;
}

.work-grid-item div {
    background: var(--primary-color);
    color: var(--secondary-color);
    padding: 10px;
    position: absolute;
    bottom: 0;
    left: 0;
    margin: 0 0 15px;
    border: solid 3px var(--secondary-color);
}

.work-grid-item.run-buddy {
    grid-column-start: 1; 
    grid-column-end: 3; 
    grid-row-start: 1; 
    grid-row-end: 3; 
    height: 300px;
}

.work-grid-item:hover .work-grid-item {
    border: solid 50px black;
}
.run-buddy {
    background-image: url("../images/run-buddy-img.PNG");
    background-size: cover;
}

.horiseon {
    background-image: url("../images/horiseon-img.PNG");
    background-size: cover;
}

.placeholder {
    background-image: url("../images/placeholder-img.PNG");
    background-size: cover;
}
/*end grid and work section*/

/*contact section*/
.contact-info {
    border-left: 3px solid;
}

.contact-info a {
    text-decoration: none;
    color: var(--secondary-color);
}

.contact-info {
    margin: 25px 0;
    padding: 25px;
}

.contact-info ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
  }

.contact-info ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.55vw;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
    border-bottom: 2px solid;
    margin: 10px;
}

.contact-info ul li a:hover {
    background: var(--primary-color);
    color: var(--secondary-color);
    border-radius: 15px;
    text-shadow: none;
}

/*end contact info */

/*resume*/

.resume {
    background-color: var(--tertiary-color);
    display: flex;
}

.resume-link {
    margin: 0 auto 5px auto;
}

.resume-link a {
    font-size: 48px;
    color: var(--secondary-color);
    padding: 10px;
}
/*general*/

.section-title {
    font-size: 48px;
    color: var(--secondary-color);
    text-align: right;
    padding: 20px;
}

section {
    padding: 25px;
    display: flex;
}

.flex-row {
    display: flex;
}

/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@media screen and (max-width: 980px) {
    /* this will be applied on any screen smaller than 980px */
    header {
        padding-bottom: 0%;
        justify-content: center; 
        position: relative;
    }
    
    header h1 {
        width: 100%;
        text-align: center;
    }
    
    header nav ul {
        margin-top: 20px;
        width: 100%;
        justify-content: center;
    }
    
    header nav ul li a {
        font-size: 20px;
        border-bottom: 0;
    }
      

    .contact-info ul li a {
        border-bottom: 0;
    }
}

/* MEDIA QUERY FOR TABLETS AND SMALLER */
@media screen and (max-width: 768px) {
    /* this will be applied on any screen between 768px and 575px */
    section {
        padding: 30px 15px;      
    }

    .work-grid-container {
        grid-template-columns: 1fr 1fr;
    }
    
    .work-grid-item.run-buddy {
        grid-column: 1 / -1;
    }
    
    .work-grid-item.horiseon {
        grid-column: 1 / -1;
    }
    
    .work-grid-item.placeholder {
        transform: none;
        writing-mode: unset;
        grid-column: 1 / -1;
        grid-row: -1;
    }
}
  
/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@media screen and (max-width: 575px) {
    /* this will be applied on any screen smaller than 575px */
    
    .section-title {
        font-size: smaller;
    }

    .resume-link a {
        font-size: smaller;
    }

    .contact-info ul li a {
        font-size: large;
    }
    
}

